# SNI-Spoofing-P

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  config.json  fake_tcp.py  injecter.py  monitor_connection.py  pyproject.toml  sni-spoofing-proxy.spec
.github/workflows/: publish-release.yml  windows-release.yml
packaging/windows/: Start-SNI-Spoof-Admin.cmd  Start-SNI-Spoof-Admin.ps1
sni_spoof/: __init__.py  browser.py  cli.py  config.py  config_store.py  control.py  doctor.py  http_connect.py  injector.py  logging_utils.py  metrics.py  network.py  pac.py  packets.py  policy.py  proxy.py  relay.py  route_scanner.py  selftest.py  wizard.py
tests/: test_config.py  test_config_store_browser.py  test_http_connect.py  test_packets.py  test_policy_pac.py  test_relay.py  test_route_scanner.py
tools/: build_release.py
utils/: network_tools.py  packet_templates.py
