[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sni-spoofing-proxy"
version = "0.2.0"
description = "Windows-focused TCP proxy with controlled TLS SNI spoofing during connection setup."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "pydivert>=3.1.0"
]

[project.scripts]
sni-spoof = "sni_spoof.cli:main"

[tool.setuptools.packages.find]
include = ["sni_spoof*"]
